Fixes redundant white spaces in docs. Closes #5418

--- a/docs/src/scss/Global.module.scss
+++ b/docs/src/scss/Global.module.scss
@@ -89,16 +89,22 @@
 
 //* Definition list
 
-dl {
-  margin-bottom: 0px;
+:global {
+  dl.cli-definitionList {
+    margin-bottom: 0px;
+  
+    dd {
+      padding-bottom: 15px;
+      padding-top: 5px;
+    }
+  
+    + dl {
+      margin-top: 0px;
+    }
 
-  dd {
-    padding-bottom: 15px;
-    padding-top: 5px;
-  }
-
-  + dl {
-    margin-top: 0px;
+    p {
+      margin: 0px;
+    }
   }
 }
 
